[workspace]
resolver = "2"
members = ["bin/*", "lib/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "A CLI tool and Rust library for managing ClickHouse database migrations"
license = "MIT"
readme = "README.md"
authors = ["Viet-Anh Duong <vietanhs0817@gmail.com>"]
repository = "https://github.com/mipsel64/chutils"
exclude = ["/.github/", "/.gitignore"]

[workspace.dependencies]
migration = { path = "./lib/migration" }
backup = { path = "./lib/backup" }
ch = { path = "./lib/ch" }
info = { path = "./lib/info" }

tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
eyre = "0.6"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
clickhouse = { version = "0.13", default-features = false }
async-trait = { version = "0.1" }
thiserror = "2"
chrono = { version = "0.4" }
serde_repr = "0.1"
serial_test = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = { version = "0.3" }
human_bytes = "0.4"
humantime = "2"
