[package]
name = "backup"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
exclude.workspace = true

[features]
default = []
rustls-tls = ["ch/rustls-tls"]
native-tls = ["ch/native-tls"]
clap = ["dep:clap", "ch/clap"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
ch = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true}
clap = { workspace = true, optional = true }
thiserror = { workspace = true }
serde_repr = { workspace = true }

[dev-dependencies]
tempfile = "3"
ch = { workspace = true, features = ["testing"] }
serial_test = { workspace = true }
tokio = { workspace = true }
clickhouse = { workspace = true }
